# OpenSandbox

./: README.md
.github/workflows/: real-e2e.yml  real-k8s-e2e.yml  sdk-tests.yml
components/egress/: README.md  main.go  mitmproxy_transparent.go  nameserver.go  nameserver_test.go
components/egress/tests/: smoke-dynamic-ip.sh  smoke-nft.sh
components/execd/: Dockerfile  bootstrap.sh
docs/: README_zh.md  secure-container.md
docs/architecture/: network-isolation.md
docs/components/: egress.md
docs/public/api/: spec-inline.js
kubernetes/: Makefile  README-ZH.md  README.md
kubernetes/charts/opensandbox-controller/: README.md  values.yaml
kubernetes/config/manager/: manager.yaml
kubernetes/docs/: HELM-DEPLOYMENT.md
kubernetes/internal/controller/: batchsandbox_controller.go  batchsandbox_controller_test.go  events.go  pool_controller.go
kubernetes/test/e2e/: e2e_suite_test.go  e2e_test.go  pause_resume_test.go
kubernetes/test/utils/: cluster_mode.go  utils.go
oseps/: 0012-credential-vault.md  0013-isolated-execution-api.md  README.md
scripts/: go-e2e.sh  python-k8s-e2e.sh
scripts/release/: create-release.sh
sdks/sandbox/go/: Makefile  README.md  code_interpreter.go  config.go  constants.go  egress.go  errors.go  execd.go  execution.go  go.mod  go.sum  http.go  http_config_test.go  lifecycle.go  manager.go  opensandbox_test.go  retry.go  retry_test.go  sandbox.go  sandbox_egress.go  sandbox_exec.go  sandbox_files.go  sandbox_wait_running_test.go  streaming.go  transport.go  types.go
sdks/sandbox/kotlin/: gradle.properties
sdks/sandbox/python/: pyproject.toml
server/: AGENTS.md  DEVELOPMENT.md  example.config.zh.toml
server/opensandbox_server/api/: schema.py
server/opensandbox_server/services/: constants.py  docker.py  validators.py
server/src/api/: lifecycle.py
server/src/services/: constants.py  docker.py
server/tests/: test_docker_service.py  test_schema.py  test_validators.py
server/tests/k8s/: test_agent_sandbox_provider.py  test_batchsandbox_provider.py  test_egress_helper.py  test_kubernetes_service.py
specs/: sandbox-lifecycle.yml
tests/go/: base_e2e_test.go  code_interpreter_e2e_test.go  command_e2e_test.go  concurrent_e2e_test.go  e2e_test.go  error_handling_e2e_test.go  filesystem_e2e_test.go  go.mod  manager_e2e_test.go  sandbox_e2e_test.go  scenario_agent_e2e_test.go  volume_e2e_test.go
tests/go/tests/: base_e2e_test.go  command_e2e_test.go  filesystem_e2e_test.go  manager_e2e_test.go  sandbox_e2e_test.go
tests/javascript/tests/: base_e2e.ts
tests/python/: Makefile  pyproject.toml
tests/python/tests/: base_e2e_test.py  test_code_interpreter_e2e.py  test_code_interpreter_e2e_sync.py  test_sandbox_e2e.py  test_sandbox_e2e_sync.py  test_sandbox_manager_e2e.py  test_sandbox_manager_e2e_sync.py
(+128 files in other folders)
